--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
 
     <string name="current_season">CURRENT SEASON</string>
     <string name="prev_season">PREVIOUS SEASON</string>
+    <string name="loading">Loading</string>
 </resources>
